# disk-tree

./: CLAUDE.md  README.md  dev  extra-mp4s.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml  test-release.yml
disk_tree/: cache.py  db.py  main.py  model.py  s3.py
scripts/: benchmark_api.py
specs/: backends.md  indexer.md  storage.md
src/disk_tree/: __init__.py  cache.py  config.py  db.py  df.py  index.py  json.py  main.py  memray.py  path.py  s3.py  server.py  time.py  times.py
src/disk_tree/backends/: __init__.py  base.py  gfind.py  local.py  s3.py  ssh.py  url.py
src/disk_tree/cli/: __init__.py  base.py  df.py  index.py  load.py  main.py  migrate.py  scans.py  utils.py
src/disk_tree/find/: index.py
src/disk_tree/sql/: cache.py  db.py
src/disk_tree/sqla/: __init__.py  base.py  db.py  model.py
src/disk_tree/storage/: __init__.py  base.py  duckdb.py  hybrid.py  parquet.py  sqlite.py
src/disk_tree/tortoise/: index.py  model.py  task_pool.py
tests/: test_e2e_backends.py  test_find.py  test_index.py  test_server.py  test_storage.py  test_tortoise.py
tests/data/: s3.csv  s3.parquet  s3.txt  s8g.csv  s8g.parquet  s8g.txt
ui/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  scrns.config.json  vite.config.ts
ui/e2e/: navigation.spec.ts  scan.spec.ts
ui/src/: App.css  App.scss  App.tsx  api.ts  index.css  main.tsx  theme.ts
ui/src/components/: CompareView.tsx  DataTable.tsx  Header.tsx  LazyPlot.tsx  RecentList.tsx  S3BucketList.tsx  ScanDetails.tsx  ScanList.tsx
ui/src/hooks/: useRecentPaths.ts  useScanProgress.ts
ui/src/utils/: format.ts
www/: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  react-table-config.d.ts  theme.d.ts  tsconfig.json
www/app/: actions.ts  db.ts  globals.scss  layout.tsx  page.tsx  size.tsx  time.tsx
www/app/file/[[...segments]]/: actions.ts  page.tsx
www/app/s3/[[...segments]]/: page.tsx
www/app/scan/[id]/: actions.ts  page.tsx
www/assets/: font-awesome.js  index.css
www/components/: Tooltip.tsx  plot.tsx  scan-details.module.scss  scan-details.tsx  scans.tsx  size.tsx  time.module.scss  time.tsx
www/src/: app.tsx  data.tsx  disk-tree.tsx  hyparquet.ts  index.tsx  list.tsx  query.tsx  radios.tsx  refresh-path.ts  scan-details-action.ts  scan-details.tsx  search-params.tsx  sorts.tsx  styles.tsx  table.tsx  theme.tsx  time.ts  utils.tsx  worker.tsx
