[project]
name = "disk-tree"
version = "0.1.0"
description = "Disk/Cloud space usage analyzer"
readme = "README.md"
authors = [{name = "Ryan Williams", email = "ryan@runsascoded.com"}]
license = {text = "Apache License 2.0"}

dependencies = [
    "aiopath",
    "click",
    "flask",
    "flask-sqlalchemy",
    "humanize",
    "kaleido",
    "pandas",
    "plotly",
    "sqlalchemy<2",
    "tqdm",
    "utz",
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.scripts]
disk-tree = "disk_tree.cli.main:cli"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["disk_tree"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
