[project]
name = "disk-tree"
version = "0.1.0"
description = "Disk/Cloud space usage analyzer"
readme = "README.md"
authors = [{name = "Ryan Williams", email = "ryan@runsascoded.com"}]
license = {text = "Apache License 2.0"}
requires-python = ">=3.11"

dependencies = [
    "click",
    "flask",
    "flask-cors",
    "flask-sqlalchemy",
    "humanize",
    "kaleido",
    "pandas",
    "plotly",
    "pyarrow",
    "python-dateutil",
    "sqlalchemy",
    "tqdm",
    "utz",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
mem = [
    "memray",
]

[project.scripts]
disk-tree = "disk_tree.cli.main:cli"
disk-tree-server = "disk_tree.server:main"

[dependency-groups]
dev = [
    "pytest",
]

[tool.uv.sources]

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["disk_tree"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    ".claude/",
    ".idea/",
    ".venv/",
    "screenshots/",
    "tmp/",
    "ui/node_modules/",
    "*.iml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/disk_tree"]

# Include built UI assets in the wheel (if they exist)
# Run `cd ui && pnpm build` before building the wheel
[tool.hatch.build.targets.wheel.force-include]
"ui/dist" = "disk_tree/static"
